tests/ui/basic/undefined_variable.rs
use metamatch::eval;

fn main() {
    eval! {
        x + 1
    };
}
